Fix (locally) failing EventMonitorTest.ShouldReceiveAppEventsWhileInstalled.

The test can fail under EventMonitorTest::TearDown() due to access on a
partially destroyed a11y object. Add a delegate check on
NativeWidgetMacNSWindow, as for the other a11y methods.

Bug: 850849
Change-Id: I93ee88817f2b84766f8e91fd2af089603fa9e895
Reviewed-on: https://chromium-review.googlesource.com/1092400
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565838}