ui/views/cocoa/native_widget_mac_nswindow.mm
@@ -211,6 +211,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // NSWindow overrides (NSAccessibility informal protocol implementation).
 
 - (id)accessibilityFocusedUIElement {
+  if (![self delegate])
+    return [super accessibilityFocusedUIElement];
+
   // The SDK documents this as "The deepest descendant of the accessibility
   // hierarchy that has the focus" and says "if a child element does not have
   // the focus, either return self or, if available, invoke the superclass's
